Details
-
Bug
-
Resolution: Fixed
-
Major
-
6.5.0
-
Ares (KV) cluster
-
Untriaged
-
Centos 64-bit
-
Yes
Description
Spdlog migration mistake caused us to allocate a buffer far bigger than we need (2GB).
Original Description
====================================================================
We have few memory-oriented tests like memory fragmentation, max .memcached RSS, memory overhead. Most of them show degradation in Mad-Hatter: http://showfast.sc.couchbase.com/#/timeline/Linux/kv/memory/all
I wasn't able to identify the root cause or the code change of this issue yet.
The issue was introduced somewhere between 6.5.0-1398 (good build) and 6.5.0-1405. Can't find exact build as we didn't have any centos enterprise builds in between. And this issue doesn't reproduce neither in CE not in Windows for some reason.
Logs from "memory fragmentation" test on 1405.
https://s3-us-west-2.amazonaws.com/perf-artifacts/jenkins-ares-8930/172.23.133.11.zip
Also comparison between 1398 and 1405: