MB-32061: Lower spdlog buffer size

Between spdlog version 0.14.0 and 1.1.0 the async pool buffer
was changed from being specified in MB to number of items. As we
were passing the same default parameters we were constructing far
larger buffers than necessary (512MB - 2 million items vs 2MB by
default).

Update the default buffersize to 8192 items (2MB).

Set the default cyclesize in unit tests to the default (100MB).
Unit tests that rely on it already modify it beforehand.

Remove the CB_MAXIMIZE_LOGGER_BUFFER_SIZE environment variable.
Given that we now flush the async logger every second, 8192 items
should be plenty.

Change-Id: I8a0b88faa19df571aa768253aebac80c6108cf9b
Reviewed-on: http://review.couchbase.org/101953
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Jim Walker <jim@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>